fix(layout): wrong size of ZoomControl
fix #19

--- a/src/index.css
+++ b/src/index.css
@@ -67,8 +67,8 @@
 }
 
 .leaflet-touch .leaflet-bar a {
-  width: 46px;
-  height: 48px;
+  width: 44px !important;
+  height: 44px !important;
   font-size: 28px;
   padding: 5px;
 }
